--- a/elect/src/app/top-bar/top-bar.component.html
+++ b/elect/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <h1>Candidates</h1>
 </a>
 
-<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">My Candidates</i>Check out</a>
+<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">archive</i>WatchList</a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
