--- a/elect/src/app/product-list/product-list.component.css
+++ b/elect/src/app/product-list/product-list.component.css
@@ -1,8 +1,22 @@
+h2{
+    text-align: center;
+}
+
+
 .clist{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 
+   
+
+}
+
+.image-pic{
+       width: 100%;
+       padding: 5px;
+       margin-left: auto;
+       margin-right: auto;
 
 }
 
