--- a/elect/src/app/product-list/product-list.component.html
+++ b/elect/src/app/product-list/product-list.component.html
@@ -80,7 +80,7 @@
   <li class="cListItem" *ngFor="let product of products | myfilter:searchText; index as productId" [routerLink]="['/products', productId]">
       <h3 class="partyClass">{{product.party}}</h3>
       <h2>{{product.numberOnList}}. {{product.title}} {{product.firstName}}  {{product.lastName}}</h2>
-      <img src="assets/images/{{product.pic}}" />
+      <img class="image-pic" src="{{product.pic}}"  /> <br>
       {{product.gender}} <br>
       {{product.district}} <br>
       {{product.bornOrAge}} <br>
