--- a/elect/src/app/product-list/product-list.component.html
+++ b/elect/src/app/product-list/product-list.component.html
@@ -1,9 +1,9 @@
-<h2>List of Candidates for the next election</h2>
+<h2>Liste der Kandidaten für die nächste Kommunalwahl in Koblenz</h2>
 
 <!---<a href="https://www.freepik.com/free-photos-vectors/business">Business vector created by freepik - www.freepik.com</a>-->
 
 <div class="form-group">
-  <span><input type="text" placeholder = "Search by Term"
+  <span><input type="text" placeholder = "Suchbegriff"
     style="width: 300px;" ng-model="searchText" />
   </span>
 </div>
@@ -12,7 +12,7 @@
 <div>
 <span style="width:100%">
   <select ng-model="selected">
-    <option>Party</option>
+    <option>Partei</option>
     <option>AFD</option>
     <option>CDU</option>
     <option>Die Partei</option>
@@ -26,13 +26,13 @@
   </select>
 
   <select ng-model="selected">
-    <option>Gender</option>
+    <option>Geschlecht</option>
     <option>m</option>
     <option>w</option>
   </select>
 
   <select ng-model="selected">
-    <option>age</option>
+    <option>Alter</option>
     <option>18-28</option>
     <option>29-38</option>
     <option>39-48</option>
@@ -41,14 +41,14 @@
   </select>
 
   <select ng-model="selected">
-    <option>title</option>
+    <option>Titel</option>
     <option>no title</option>
     <option>Dr.</option>
     <option>Prof.</option>
   </select>
 
   <select ng-model="selected">
-    <option>District</option>
+    <option>Stadtteil</option>
     <option>Altstadt</option>
     <option>Arenberg</option>
     <option>Bubenheim</option>
