--- a/elect/src/app/top-bar/top-bar.component.html
+++ b/elect/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,8 @@
 <a [routerLink]="['/']">
-  <h1>Candidates</h1>
+  <h1>Wahlshop</h1>
 </a>
 
-<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">archive</i>WatchList</a>
+<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">archive</i>Merkliste</a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
